# Course_work_4

./: README.md  pyproject.toml
src/: classes.py  main.py  vacancies.json
